@@ -13,7 +13,6 @@ import org.springframework.web.servlet.resource.NoResourceFoundException;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 
 @RestControllerAdvice
@@ -21,85 +20,35 @@ public class GlobalErrorHandler {
 
     @ExceptionHandler(AnnotatorNotFoundException.class)
     public ResponseEntity<GlobalResponse<?>> handleAnnotatorNotFound(AnnotatorNotFoundException ex) {
-        return ResponseEntity
-                .status(HttpStatus.NOT_FOUND)
+        return ResponseEntity.status(HttpStatus.NOT_FOUND)
                 .body(GlobalResponse.error(List.of(ex.getMessage())));
-    }
-
-    @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<GlobalResponse<?>> handleValidationErrors(MethodArgumentNotValidException ex) {
-        List<String> errorMessages = ex.getFieldErrors().stream()
-                .map(err -> "Field '" + err.getField() + "': " + err.getDefaultMessage())
-                .collect(Collectors.toList());
-
-        return ResponseEntity.badRequest()
-                .body(GlobalResponse.error(errorMessages));
-    }
-
-    @ExceptionHandler(IllegalArgumentException.class)
-    public ResponseEntity<GlobalResponse<?>> handleIllegalArgument(IllegalArgumentException ex) {
-        List<String> errorMessages = Collections.singletonList(ex.getMessage() != null ? ex.getMessage() : "Invalid argument provided");
-        return ResponseEntity.badRequest()
-                .body(GlobalResponse.error(errorMessages));
-    }
-    @ExceptionHandler(NullPointerException.class)
-    public ResponseEntity<GlobalResponse<?>> handleNullPointer(NullPointerException ex) {
-        List<String> errorMessages = Collections.singletonList(ex.getMessage() != null ? ex.getMessage() : "Invalid argument provided");
-        return ResponseEntity.badRequest()
-                .body(GlobalResponse.error(errorMessages));
-
     }
 
     @ExceptionHandler(CustomResponseException.class)
     public ResponseEntity<GlobalResponse<?>> handleCustomResponse(CustomResponseException ex) {
-        System.out.println("error message : " + ex.getMessage());
-
-        List<String> errorMessages = Collections.singletonList(ex.getMsg() != null ? ex.getMsg() : "Invalid response provideddddd");
-        return ResponseEntity.badRequest()
-                .body(GlobalResponse.error(errorMessages));
+        HttpStatus status = HttpStatus.valueOf(ex.getCode());
+        return ResponseEntity.status(status)
+                .body(GlobalResponse.error(List.of(ex.getMsg())));
     }
 
-    @ExceptionHandler(HttpMessageNotReadableException.class)
-    public ResponseEntity<GlobalResponse<?>> badUsedKeysInBodyRequest(HttpMessageNotReadableException ex) {
-
-        List<String> errorMessages = List.of("bad Used Keys in Body Request");
+    @ExceptionHandler(MethodArgumentNotValidException.class)
+    public ResponseEntity<GlobalResponse<?>> handleValidationErrors(MethodArgumentNotValidException ex) {
+        List<String> errors = ex.getFieldErrors().stream()
+                .map(err -> err.getField() + ": " + err.getDefaultMessage())
+                .collect(Collectors.toList());
         return ResponseEntity.badRequest()
-                .body(GlobalResponse.error(errorMessages));
-    }
-    @ExceptionHandler(MethodArgumentTypeMismatchException.class)
-    public ResponseEntity<GlobalResponse<?>> handleTypeMismatch(MethodArgumentTypeMismatchException ex) {
-        String paramName = ex.getName();
-        String value = ex.getValue() != null ? ex.getValue().toString() : "null";
-        String requiredType = ex.getRequiredType() != null ? ex.getRequiredType().getSimpleName() : "unknown";
-
-        String errorMessage = String.format(
-                "Invalid value '%s' for parameter '%s'. Expected type: %s.",
-                value, paramName, requiredType
-        );
-
-        return ResponseEntity.badRequest()
-                .body(GlobalResponse.error(List.of(errorMessage)));
-    }
-
-
-    @ExceptionHandler(NoResourceFoundException.class)
-    public ResponseEntity<GlobalResponse<?>> badUsedKeysInBodyRequest(NoResourceFoundException ex) {
-
-        List<String> errorMessages = List.of("Emdpoint doenst exists ");
-        return ResponseEntity.badRequest()
-                .body(GlobalResponse.error(errorMessages));
+                .body(GlobalResponse.error(errors));
     }
 
     @ExceptionHandler(DataIntegrityViolationException.class)
-    public ResponseEntity<GlobalResponse<?>> dataIntegrityViolationException(DataIntegrityViolationException ex) {
-
-        List<String> errorMessages = List.of("the  inserted data violates the database constraint");
-        return ResponseEntity.badRequest()
-                .body(GlobalResponse.error(errorMessages));
+    public ResponseEntity<GlobalResponse<?>> handleDataIntegrityViolation(DataIntegrityViolationException ex) {
+        return ResponseEntity.status(HttpStatus.CONFLICT)
+                .body(GlobalResponse.error(List.of("Database constraint violation")));
     }
 
-
+    @ExceptionHandler(Exception.class)
+    public ResponseEntity<GlobalResponse<?>> handleGenericException(Exception ex) {
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                .body(GlobalResponse.error(List.of("Internal server error")));
+    }
 }
-
-
-
